--- a/src/components/layouts/Main/Main.css
+++ b/src/components/layouts/Main/Main.css
@@ -1,7 +1,19 @@
 main{
+    display: flex;
+    justify-content: space-between;
     width: 50vw;
     height: 50vh;
-    background: red;
+    background: rgb(167, 4, 4);
     border-radius: 10px;
     margin: 0px 0px 35px 450px;
+}
+
+.Items{
+    display: flex;
+    flex-direction: column;
+}
+.check{
+    display: flex;
+    flex-direction: column;
+    padding: 0px 40px 0px 0px;
 }
