--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,16 @@ a {
 a:hover {
   color: #535bf2;
 }
+p{
+  color: white;
+}
 
 body {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   display: flex;
-
+  background: #1a1a1a;
 }
 
 h1 {
