--- a/src/components/layouts/Main/Main.css
+++ b/src/components/layouts/Main/Main.css
@@ -2,8 +2,8 @@ main{
     display: flex;
     justify-content: space-between;
     width: 50vw;
-    height: 50vh;
-    /* background: rgb(167, 4, 4); */
+    min-height: 40vh;
+    background: rgb(167, 4, 4);
     border-radius: 10px;
     margin: 0px 0px 35px 450px;
 }
